# Nero

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPRINT_PLAN_S3_S4.md  babel.cfg  docker-compose.dev.yml  main.py  pyproject.toml  tailwind.config.js
.github/: CODEOWNERS
app/: api_client.py  at_dam_descriptions.py  bg_dam_descriptions.py  blog.py  ch_dam_descriptions.py  config.py  country_config.py  cz_dam_descriptions.py  dam_description_registry.py  dam_descriptions.py  db.py  de_dam_descriptions.py  es_dam_descriptions.py  fi_dam_descriptions.py  gr_dam_descriptions.py  i18n.py  it_dam_descriptions.py  main.py  no_dam_descriptions.py  pl_dam_descriptions.py  pt_dam_descriptions.py  security.py  sync.py  utils.py
deploy/: ADSENSE_ACTIVATION.md  AWS_DEPLOY.md  DEPLOY.md  certbot-renew-hook.sh  env.example  nginx-waterlevels.conf  waterlevels.service
docs/: NEW_COUNTRY_CHECKLIST.md
scripts/: check-csp-handlers.sh  deploy.sh  local-deploy.sh  local-teardown.sh
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_about_page.py  test_adsense.py  test_api_client.py  test_austria_provider.py  test_bulgaria_provider.py  test_chartjs_loading.py  test_config.py  test_country_layout.py  test_country_middleware.py  test_country_nav.py  test_czech_locale.py  test_czech_provider.py  test_dam_description_registry.py  test_db.py  test_finland_provider.py  test_finnish_locale.py  test_flag_icons.py  (+43 more)
(+98 files in other folders)
