[project]
name = "waterlevels"
version = "0.1.0"
description = "Cyprus Water Levels Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.7.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e_live: E2E tests against the live site (https://nero.cy)",
    "e2e_local: E2E tests against a local server (localhost:8000)",
]
addopts = "--ignore=tests/e2e"
